<resources>
    <string name="app_name">BackVietLibrary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Trang chủ</string>
    <string name="new_and_hot">Mới nhất</string>
    <string name="offer">Offer</string>
    <string name="library">Library</string>
    <string name="upgrade">Upgrade</string>
    <string name="search">search</string>
    <string name="content_description_search">Search button</string>
    <string name="account">account</string>
    <string name="content_description_account">Account button</string>
    <string name="page_info">Page %1$s of %2$s</string>
    <string name="page_percent">%1$s%%</string>
    <string name="page_number">%1$s / %2$s</string>
    <string name="facebook_app_id">866306161901150</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">ae95bdc950d1dc7f7918c536abf48cdb</string>
    <string name="logout">Đăng xuất</string>
    <string name="categories">Chủ đề</string>
    <string name="cart">cart</string>
    <string name="my_book">Sách của tôi</string>
    <string name="go_home">Về trang chủ</string>
</resources>