<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/round_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_cart"
        android:contentDescription="@string/cart"
        android:icon="@drawable/round_shopping_cart_24"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/account"
        android:contentDescription="@string/content_description_account"
        android:icon="@drawable/round_account_circle_24"
        android:title="@string/account"
        app:showAsAction="ifRoom" />

</menu>