<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/round_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/newAndHotFragment"
        android:enabled="true"
        android:icon="@drawable/round_new_releases_24"
        android:title="@string/new_and_hot" />
    <item
        android:id="@+id/categoriesFragment"
        android:enabled="true"
        android:icon="@drawable/round_category_24"
        android:title="@string/categories" />
    <item
        android:id="@+id/libraryFragment"
        android:enabled="true"
        android:icon="@drawable/round_menu_book_24"
        android:title="Sách của tôi" />
</menu>